--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -17,7 +17,8 @@
 
 .name-text {
   font-size: 64px;
-  margin: 20px 0px 0px;
+  font-weight: 800;
+  margin: 20px 0px 10px;
   color: #333333;
 }
 
@@ -84,4 +85,15 @@
 
 .photo-card:hover {
   transform: scale(1.05);
+}
+
+.learn-more-button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  outline: 0;
+  border: 0;
+  color: white;
+  font-size: small;
+  background-color: #003AFF;
 }
